INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

add_executable(string_piece_test string_piece_test.cc)
target_link_libraries(string_piece_test gtest)

add_executable(stringprintf_test stringprintf_test.cc)
target_link_libraries(stringprintf_test gtest)
target_link_libraries(stringprintf_test stringprintf)

add_test(stringprintf_test stringprintf_test)
add_test(string_piece_test string_piece_test)
